resolve Kafka topic config